# magnetic-field-inspired-navigation

./: .gitignore  README.md  pyproject.toml
artifacts/: benchmark_comparison_3d.html  benchmark_comparison_quadrotor_3d.html  benchmark_metrics.csv  benchmark_metrics_3d.csv  benchmark_metrics_diff_drive.csv  benchmark_metrics_dynamic_2d.csv  benchmark_metrics_dynamic_3d.csv  benchmark_metrics_dynamic_diff_drive_2d.csv  benchmark_metrics_dynamic_quadrotor_3d.csv  benchmark_metrics_quadrotor_3d.csv  paper2022_metric_summary_all_models.csv  reference_trajectory.csv
docs/: algorithm_and_model_changes.md  algorithm_and_model_changes.tex  code_structure.md  paper2022_metric_summary.html  paper2022_metric_summary.md  paper_2022_checklist.md  paper_2d_derivation_target.tex  paper_equation_to_code_mapping.tex  webots_local_setup.md
scripts/: run_benchmarks.py  run_benchmarks_3d.py  run_benchmarks_diff_drive.py  run_benchmarks_dynamic_2d.py  run_benchmarks_dynamic_3d.py  run_benchmarks_dynamic_diff_drive_2d.py  run_benchmarks_dynamic_quadrotor_3d.py  run_benchmarks_quadrotor_3d.py  run_nonconvex_diagnostic.py  run_reference.py  summarize_paper2022_metrics.py
src/mfinav/: __init__.py  double_integrator.py
src/mfinav/config/: __init__.py  simulation.py
src/mfinav/metrics/: __init__.py  benchmark.py
src/mfinav/models/: __init__.py  differential_drive.py  double_integrator.py  quadrotor.py
src/mfinav/navigators/: __init__.py  apf.py  base.py  baselines.py  mfi.py  mfi3d.py
src/mfinav/obstacles/: __init__.py  (+7 more)
webots/worlds/: .mfi_epuck_arena.wbproj  mfi_epuck_arena.wbt
(+15 files in other folders)
